Added box-sizing, fixed font size, fixed jokes positions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="page front">
         <div class="pin"></div>
-        <article>
+        <article class="clearfix">
             <h2>Lorem ipsum dolor sit amet</h2>
             <p><img class="left-image" src="images/cup.png">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel velit in nisl accumsan blandit. Mauris
@@ -25,11 +25,12 @@
                 egestas fringilla. Pellentesque a neque quis eros lobortis mollis sit amet ut dolor. Aenean nec quam
                 dictum,
                 pharetra nulla et, ornare eros.</p>
-            <p>Quisque accumsan felis vel dolor placerat, sed imperdiet dolor tempor. Morbi et molestie dolor, ac
+            <p> Quisque accumsan felis vel dolor placerat, sed imperdiet dolor tempor. Morbi et molestie dolor, ac
                 consectetur ipsum. Nullam varius risus in purus bibendum, in auctor odio eleifend. Proin cursus leo quis
                 ex
                 commodo, non placerat diam finibus. </p>
-            <p>Aliquam tempus gravida fermentum. Quisque vel sodales risus. Sed ultricies justo sem, in rutrum neque
+            <p><img class="float-right" src="images/you-are.png">
+                Aliquam tempus gravida fermentum. Quisque vel sodales risus. Sed ultricies justo sem, in rutrum neque
                 interdum eget. Donec nec metus nunc. Nullam tempus convallis porttitor. Aliquam tempus gravida
                 fermentum.
                 Quisque vel sodales risus. Sed ultricies justo sem, in rutrum neque interdum eget. Donec nec metus nunc.
@@ -38,8 +39,18 @@
                 nunc. Nullam tempus convallis porttitor.</p>
         </article>
         <section>
-            <h3>Nulla viverra tortor efficitur vestibulum tristique.</h3>
-            <p>Suspendisse bibendum porttitor purus quis vestibulum. Etiam pellentesque justo ac dui cursus tincidunt.
+            <h4>Nulla viverra tortor efficitur vestibulum tristique.</h4>
+            <div class="jokes">
+                <div class="row clearfix">
+                    <img src="images/joke1.png" class="joke float-left">
+                    <img src="images/joke2.png" class="joke float-right">
+                </div>
+                <div class="row">
+                    <img src="images/joke3.png" class="joke float-left">
+                    <img src="images/joke4.png" class="joke float-right">
+                </div>
+            </div>
+            <p class="small">Suspendisse bibendum porttitor purus quis vestibulum. Etiam pellentesque justo ac dui cursus tincidunt.
                 Etiam
                 iaculis semper metus vel facilisis. Etiam ut mi nec libero ullamcorper feugiat a eu augue.</p>
         </section>
